--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "element-ui": "^2.15.6",
     "fastclick": "^1.0.6",
     "swiper": "5.x",
