--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "better-scroll": "^2.4.2",
     "element-ui": "^2.15.6",
     "fastclick": "^1.0.6",
     "swiper": "5.x",
