--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "axios": "^0.24.0",
     "better-scroll": "^2.4.2",
     "element-ui": "^2.15.6",
-    "fastclick": "^1.0.6",
     "swiper": "5.x",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^4.1.1",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
